--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -63,7 +63,7 @@
 	<rule ref="WordPress.WP.I18n">
 		<properties>
 			<property name="text_domain" type="array">
-				<element value="klaichtal"/>
+				<element value="kraichtal"/>
 			</property>
 		</properties>
 	</rule>
