--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"wptrt/wpthemereview": "^0.2.1",
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
 		"php-parallel-lint/php-parallel-lint": "^1.3",
-		"szepeviktor/phpstan-wordpress": "^1.0"
+		"szepeviktor/phpstan-wordpress": "^1.0",
+		"paulthewalton/acf-pro-stubs": "5.8.9.1"
 	},
 	"scripts": {
 		"analyze": "@php ./vendor/bin/phpstan analyze",
