--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@wordpress/scripts": "19.2.2",
 		"@wordpress/stylelint-config": "19.1.0",
 		"autoprefixer": "10.4.2",
+		"browser-sync": "2.27.10",
 		"node-sass": "7.0.1",
 		"normalize.css": "8.0.1",
 		"npm-run-all": "4.1.5",
@@ -34,6 +35,7 @@
 		"build": "run-p -l 'build:**'",
 		"build:editor": "node-sass --include-path scss assets/scss/editor.scss editor.css --output-style compressed",
 		"build:style": "node-sass --include-path scss assets/scss/style.scss style.css --output-style compressed",
+		"dev": "browser-sync start --proxy 'https://stephanie-haller.test' --files 'style.css'",
 		"format": "wp-scripts format",
 		"lint": "run-p -l 'lint:**'",
 		"lint:css": "wp-scripts lint-style style.css",
