--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"build": "run-p -l 'build:**'",
 		"build:editor": "node-sass --include-path scss assets/scss/editor.scss editor.css --output-style compressed",
 		"build:style": "node-sass --include-path scss assets/scss/style.scss style.css --output-style compressed",
-		"dev": "browser-sync start --proxy 'https://stephanie-haller.test' --files 'style.css'",
+		"browser-sync": "browser-sync start --proxy 'https://stephanie-haller.test' --files='**/*'",
 		"format": "wp-scripts format",
 		"lint": "run-p -l 'lint:**'",
 		"lint:css": "wp-scripts lint-style style.css",
