--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
 		"build": "run-p -l 'build:**'",
 		"build:editor": "node-sass --include-path scss assets/scss/editor.scss editor.css --output-style compressed",
 		"build:style": "node-sass --include-path scss assets/scss/style.scss style.css --output-style compressed",
-		"browser-sync": "browser-sync start --proxy 'https://stephanie-haller.test' --files='**/*'",
 		"format": "wp-scripts format",
 		"lint": "run-p -l 'lint:**'",
 		"lint:css": "wp-scripts lint-style style.css",
@@ -44,6 +43,7 @@
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
 		"phpcs": " composer phpcs",
 		"phpcbf": "composer phpcbf",
+		"sync": "browser-sync start --proxy 'https://stephanie-haller.test' --files='**/*'",
 		"watch:editor": "npm run build:editor && npm run build:editor -- --watch",
 		"watch:style": "npm run build:style && npm run build:style -- --watch"
 	}
