--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
 		"autoprefixer": "10.4.2",
 		"browser-sync": "2.27.10",
 		"node-sass": "7.0.1",
-		"normalize.css": "8.0.1",
 		"npm-run-all": "4.1.5",
 		"stylelint": "13.13.1"
 	},
@@ -44,6 +43,7 @@
 		"phpcs": " composer phpcs",
 		"phpcbf": "composer phpcbf",
 		"sync": "browser-sync start --proxy 'https://stephanie-haller.test' --files='**/*'",
+		"watch": "run-p -l 'watch:**'",
 		"watch:editor": "npm run build:editor && npm run build:editor -- --watch",
 		"watch:style": "npm run build:style && npm run build:style -- --watch"
 	}
