--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
 		"php-parallel-lint/php-parallel-lint": "^1.3",
 		"szepeviktor/phpstan-wordpress": "^1.0",
-		"paulthewalton/acf-pro-stubs": "5.8.9.1"
+		"paulthewalton/acf-pro-stubs": "5.8.9.1",
+		"squizlabs/php_codesniffer": "^3.7"
 	},
 	"scripts": {
 		"analyze": "@php ./vendor/bin/phpstan analyze",
